# libmastermind

./: CMakeLists.txt
bindings/python/: CMakeLists.txt  main.cpp  setup.py.in
cmake/: FindPythonExtensionDir.cmake
debian/: changelog  control  rules
src/: mastermind_impl.cpp  mastermind_impl.hpp
